feat(user): add user profile creation
Related: #6
