# internal/service/user/dto/response/get_otp_response.go
@@ -1,0 +1,5 @@
+package response
+
+type GetOtpResponse struct {
+	PhoneNumber string `json:"phoneNumber"`
+}
